@@ -170,8 +170,6 @@ typedef struct _PTPUSBEventContainer PTPUSBEventContainer;
 #define PTP_OC_CANON_ThemeDownload	0x9010
 #define PTP_OC_CANON_ThemeUpload	0x9011
 
-#define PTP_OC_NIKON_CurveDownload	0x90C5
-#define PTP_OC_NIKON_CurveUpload	0x90C6
 /* initiate movie capture:
    9010 startmoviecapture?
    9003 stopmoviecapture?
@@ -186,6 +184,14 @@ typedef struct _PTPUSBEventContainer PTPUSBEventContainer;
 #define PTP_OC_CANON_GetChanges		0x9020
 #define PTP_OC_CANON_GetFolderEntries	0x9021
 
+/* Nikon extension Operation Codes */
+#define PTP_OC_NIKON_SetControlMode     0x90C2
+#define PTP_OC_NIKON_CurveDownload	0x90C5
+#define PTP_OC_NIKON_CurveUpload	0x90C6
+
+/* Proprietary vendor extension operations mask */
+#define PTP_OC_EXTENSION_MASK           0xF000
+#define PTP_OC_EXTENSION                0x9000
 
 /* Response Codes */
 
@@ -629,17 +635,17 @@ typedef struct _PTPNIKONCurveData PTPNIKONCurveData;
 #define PTP_DPC_NIKON_WhiteBalanceAutoBias		0xD017
 #define PTP_DPC_NIKON_WhiteBalanceTungstenBias		0xD018
 #define PTP_DPC_NIKON_WhiteBalanceFlourescentBias	0xD019
-#define PTP_DPC_NIKON_WhiteBalanceDaylightBias		0xD01a
-#define PTP_DPC_NIKON_WhiteBalanceFlashBias		0xD01b
-#define PTP_DPC_NIKON_WhiteBalanceCloudyBias		0xD01c
-#define PTP_DPC_NIKON_WhiteBalanceShadeBias		0xD01d
-#define PTP_DPC_NIKON_WhiteBalanceColourTemperature	0xD01e
-#define PTP_DPC_NIKON_ImageSharpening			0xD02a
-#define PTP_DPC_NIKON_ToneCompensation			0xD02b
-#define PTP_DPC_NIKON_ColourMode			0xD02c
-#define PTP_DPC_NIKON_HueAdjustment			0xD02d
-#define PTP_DPC_NIKON_NonCPULensDataFocalLength		0xD02e
-#define PTP_DPC_NIKON_NonCPULensDataMaximumAperature	0xD02f
+#define PTP_DPC_NIKON_WhiteBalanceDaylightBias		0xD01A
+#define PTP_DPC_NIKON_WhiteBalanceFlashBias		0xD01B
+#define PTP_DPC_NIKON_WhiteBalanceCloudyBias		0xD01C
+#define PTP_DPC_NIKON_WhiteBalanceShadeBias		0xD01D
+#define PTP_DPC_NIKON_WhiteBalanceColorTemperature	0xD01E
+#define PTP_DPC_NIKON_ImageSharpening			0xD02A
+#define PTP_DPC_NIKON_ToneCompensation			0xD02B
+#define PTP_DPC_NIKON_ColorMode				0xD02C
+#define PTP_DPC_NIKON_HueAdjustment			0xD02D
+#define PTP_DPC_NIKON_NonCPULensDataFocalLength		0xD02E
+#define PTP_DPC_NIKON_NonCPULensDataMaximumAperture	0xD02F
 #define PTP_DPC_NIKON_CSMMenuBankSelect			0xD040
 #define PTP_DPC_NIKON_MenuBankNameA			0xD041
 #define PTP_DPC_NIKON_MenuBankNameB			0xD042
@@ -647,81 +653,93 @@ typedef struct _PTPNIKONCurveData PTPNIKONCurveData;
 #define PTP_DPC_NIKON_MenuBankNameD			0xD044
 #define PTP_DPC_NIKON_A1AFCModePriority			0xD048
 #define PTP_DPC_NIKON_A2AFSModePriority			0xD049
-#define PTP_DPC_NIKON_A3GroupDynamicAF			0xD04a
-#define PTP_DPC_NIKON_A4AFActivation			0xD04b
-#define PTP_DPC_NIKON_A5FocusAreaIllumManualFocus	0xD04c
-#define PTP_DPC_NIKON_FocusAreaIllumContinuous		0xD04d
-#define PTP_DPC_NIKON_FocusAreaIllumWhenSelected 	0xD04e
-#define PTP_DPC_NIKON_A6FocusArea			0xD04f
+#define PTP_DPC_NIKON_A3GroupDynamicAF			0xD04A
+#define PTP_DPC_NIKON_A4AFActivation			0xD04B
+#define PTP_DPC_NIKON_A5FocusAreaIllumManualFocus	0xD04C
+#define PTP_DPC_NIKON_FocusAreaIllumContinuous		0xD04D
+#define PTP_DPC_NIKON_FocusAreaIllumWhenSelected 	0xD04E
+#define PTP_DPC_NIKON_FocusAreaWrap			0xD04F
 #define PTP_DPC_NIKON_A7VerticalAFON			0xD050
-#define PTP_DPC_NIKON_B1ISOAuto				0xD054
+#define PTP_DPC_NIKON_ISOAuto				0xD054
 #define PTP_DPC_NIKON_B2ISOStep				0xD055
-#define PTP_DPC_NIKON_B3EVStep				0xD056
+#define PTP_DPC_NIKON_EVStep				0xD056
 #define PTP_DPC_NIKON_B4ExposureCompEv			0xD057
-#define PTP_DPC_NIKON_B5ExposureComp			0xD058
-#define PTP_DPC_NIKON_B6CenterWeightArea		0xD059
-#define PTP_DPC_NIKON_C1AELock				0xD05e
-#define PTP_DPC_NIKON_C2AELAFL				0xD05f
-#define PTP_DPC_NIKON_C3AutoMeterOff			0xD062
-#define PTP_DPC_NIKON_C4SelfTimer			0xD063
-#define PTP_DPC_NIKON_C5MonitorOff			0xD064
+#define PTP_DPC_NIKON_ExposureCompensation		0xD058
+#define PTP_DPC_NIKON_CenterWeightArea			0xD059
+#define PTP_DPC_NIKON_AELockMode			0xD05E
+#define PTP_DPC_NIKON_AELAFLMode			0xD05F
+#define PTP_DPC_NIKON_MeterOff				0xD062
+#define PTP_DPC_NIKON_SelfTimer				0xD063
+#define PTP_DPC_NIKON_MonitorOff			0xD064
 #define PTP_DPC_NIKON_D1ShootingSpeed			0xD068
 #define PTP_DPC_NIKON_D2MaximumShots			0xD069
-#define PTP_DPC_NIKON_D3ExpDelayMode			0xD06a
-#define PTP_DPC_NIKON_D4LongExposureNoiseReduction	0xD06b
-#define PTP_DPC_NIKON_D5FileNumberSequence		0xD06c
-#define PTP_DPC_NIKON_D6ControlPanelFinderRearControl	0xD06d
-#define PTP_DPC_NIKON_ControlPanelFinderViewfinder	0xD06e
-#define PTP_DPC_NIKON_D7Illumination			0xD06f
+#define PTP_DPC_NIKON_D3ExpDelayMode			0xD06A
+#define PTP_DPC_NIKON_LongExposureNoiseReduction	0xD06B
+#define PTP_DPC_NIKON_FileNumberSequence		0xD06C
+#define PTP_DPC_NIKON_D6ControlPanelFinderRearControl	0xD06D
+#define PTP_DPC_NIKON_ControlPanelFinderViewfinder	0xD06E
+#define PTP_DPC_NIKON_D7Illumination			0xD06F
 #define PTP_DPC_NIKON_E1FlashSyncSpeed			0xD074
-#define PTP_DPC_NIKON_E2FlashShutterSpeed		0xD075
+#define PTP_DPC_NIKON_FlashShutterSpeed			0xD075
 #define PTP_DPC_NIKON_E3AAFlashMode			0xD076
 #define PTP_DPC_NIKON_E4ModelingFlash			0xD077
-#define PTP_DPC_NIKON_E5AutoBracketySet			0xD078
+#define PTP_DPC_NIKON_BracketSet			0xD078
 #define PTP_DPC_NIKON_E6ManualModeBracketing		0xD079	
-#define PTP_DPC_NIKON_E7AutoBracketOrder		0xD07a
-#define PTP_DPC_NIKON_E8AutoBracketSelection		0xD07b
+#define PTP_DPC_NIKON_BracketOrder			0xD07A
+#define PTP_DPC_NIKON_E8AutoBracketSelection		0xD07B
 #define PTP_DPC_NIKON_F1CenterButtonShootingMode	0xD080
 #define PTP_DPC_NIKON_CenterButtonPlaybackMode		0xD081
 #define PTP_DPC_NIKON_F2Multiselector			0xD082
 #define PTP_DPC_NIKON_F3PhotoInfoPlayback		0xD083
 #define PTP_DPC_NIKON_F4AssignFuncButton		0xD084
 #define PTP_DPC_NIKON_F5CustomizeCommDials		0xD085
-#define PTP_DPC_NIKON_ChangeMainSub			0xD086
-#define PTP_DPC_NIKON_AperatureSetting			0xD087
+#define PTP_DPC_NIKON_ReverseCommandDial		0xD086
+#define PTP_DPC_NIKON_ApertureSetting			0xD087
 #define PTP_DPC_NIKON_MenusAndPlayback			0xD088
 #define PTP_DPC_NIKON_F6ButtonsAndDials			0xD089
-#define PTP_DPC_NIKON_F7NoCFCard			0xD08a
+#define PTP_DPC_NIKON_NoCFCard				0xD08A
 #define PTP_DPC_NIKON_ImageCommentString		0xD090
-#define PTP_DPC_NIKON_AutoImageRotation			0xD092
-#define PTP_DPC_NIKON_ExposureBracketingOnOff		0xD0c0
-#define PTP_DPC_NIKON_ExposureBracketingIntervalDist	0xD0c1
-#define PTP_DPC_NIKON_ExposureBracketingNumBracketPlace	0xD0c2
-#define PTP_DPC_NIKON_LensID				0xD0e0
-#define PTP_DPC_NIKON_FocalLengthMin			0xD0e3
-#define PTP_DPC_NIKON_FocalLengthMax			0xD0e4
-#define PTP_DPC_NIKON_MaxApAtMinFocalLength		0xD0e5
-#define PTP_DPC_NIKON_MaxApAtMaxFocalLength		0xD0e6
-#define PTP_DPC_NIKON_AutofocusLCDTopMode2		0xD107
-#define PTP_DPC_NIKON_AutofocusLCDTopMode3AndMode4	0xD108
-#define PTP_DPC_NIKON_LightMeter			0xD10a
-#define PTP_DPC_NIKON_ExposureAperatureLock(ReadOnly)	0xD111
+#define PTP_DPC_NIKON_ImageCommentAttach		0xD091
+#define PTP_DPC_NIKON_ImageRotation			0xD092
+#define PTP_DPC_NIKON_Bracketing			0xD0C0
+#define PTP_DPC_NIKON_ExposureBracketingIntervalDist	0xD0C1
+#define PTP_DPC_NIKON_BracketingProgram			0xD0C2
+#define PTP_DPC_NIKON_LensID				0xD0E0
+#define PTP_DPC_NIKON_FocalLengthMin			0xD0E3
+#define PTP_DPC_NIKON_FocalLengthMax			0xD0E4
+#define PTP_DPC_NIKON_MaxApAtMinFocalLength		0xD0E5
+#define PTP_DPC_NIKON_MaxApAtMaxFocalLength		0xD0E6
+#define PTP_DPC_NIKON_ExposureTime			0xD100
 #define PTP_DPC_NIKON_MaximumShots			0xD103
+#define PTP_DPC_NIKON_AutoExposureLock			0xD105
+#define PTP_DPC_NIKON_AutoFocusLock			0xD106
+#define PTP_DPC_NIKON_AutofocusLCDTopMode2		0xD107
+#define PTP_DPC_NIKON_AutofocusArea			0xD108
+#define PTP_DPC_NIKON_LightMeter			0xD10A
+#define PTP_DPC_NIKON_CameraOrientation			0xD10E
+#define PTP_DPC_NIKON_ExposureApertureLock		0xD111
 #define PTP_DPC_NIKON_FlashExposureCompensation		0xD126
-#define PTP_DPC_NIKON_Beep				0xD160
-#define PTP_DPC_NIKON_AFC				0xD161
-#define PTP_DPC_NIKON_AFLampOff				0xD163
+#define PTP_DPC_NIKON_OptimizeImage			0xD140
+#define PTP_DPC_NIKON_Saturation			0xD142
+#define PTP_DPC_NIKON_BeepOff				0xD160
+#define PTP_DPC_NIKON_AutofocusMode			0xD161
+#define PTP_DPC_NIKON_AFAssist				0xD163
 #define PTP_DPC_NIKON_PADVPMode				0xD164
-#define PTP_DPC_NIKON_ReviewOff				0xD165
-#define PTP_DPC_NIKON_GridDisplay			0xD16c
+#define PTP_DPC_NIKON_ImageReview			0xD165
 #define PTP_DPC_NIKON_AFAreaIllumination		0xD166
 #define PTP_DPC_NIKON_FlashMode				0xD167
-#define PTP_DPC_NIKON_FlashPower			0xD16d
-#define PTP_DPC_NIKON_FlashSignOff			0xD169
+#define PTP_DPC_NIKON_FlashCommanderMode		0xD168
+#define PTP_DPC_NIKON_FlashSign				0xD169
 #define PTP_DPC_NIKON_RemoteTimeout			0xD16B
-#define PTP_DPC_NIKON_LowLight				0xD1b0
-#define PTP_DPC_NIKON_FlashOpen				0xD1c0
-#define PTP_DPC_NIKON_FlashCharged			0xD1c1
+#define PTP_DPC_NIKON_GridDisplay			0xD16C
+#define PTP_DPC_NIKON_FlashModeManualPower		0xD16D
+#define PTP_DPC_NIKON_FlashModeCommanderPower		0xD16E
+#define PTP_DPC_NIKON_CSMMenu				0xD180
+#define PTP_DPC_NIKON_LowLight				0xD1B0
+#define PTP_DPC_NIKON_FlashOpen				0xD1C0
+#define PTP_DPC_NIKON_FlashCharged			0xD1C1
+
+
 
 /* Device Property Form Flag */
 
